# fastapi-vue

./: docker-compose.yaml
back/: .env  .gitignore  Dockerfile  database.db  makefile  prestart.sh  push.sh  pyproject.toml
back/app/: initial_data.py  main.py
back/app/src/core/: config.py  security.py
back/app/src/crud/: __init__.py  base.py  crud_book.py  crud_user.py
back/app/src/database/: __init__.py  engine.py  init_db.py  session.py
back/app/src/database/models/: __init__.py  author.py  books.py  users.py
back/app/src/exception/handler/: http_error.py  validation_error.py
back/app/src/router/: deps.py
back/app/src/router/api_v1/: api.py
back/app/src/router/api_v1/endpoints/: book.py  login.py  user.py  users.py  utils.py
back/app/src/schema/: __init__.py  books_schema.py  user_schema.py
back/app/src/utils/: json_util.py  response_builder.py
back/migrations/: env.py
back/migrations/versions/: 33133bea071b_init.py  6b1546b42a32_update.py  6d0f16b77a78_update_table.py  877aeee626d9_update.py  a0ad4e97148a_update_table.py
front/: Dockerfile  package.json
front/nginx/: nginx.conf
front/src/: permission.js
front/src/api/: login.js  user.js  users.js  utils.js
front/src/layout/components/: Navbar.vue
front/src/layout/components/Sidebar/: index.vue
front/src/router/: index.js
front/src/store/modules/: user.js
front/src/utils/: request.js  validate.js
front/src/views/login/: index.vue
front/src/views/profile/: index.vue
front/src/views/user/: add.vue  index.vue
