[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = "Fastapi Starter Template"
authors = ["Naufal Afif <naufalafif58@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.4.3"
fastapi = "^0.61.1"
uvicorn = "^0.12.0"
fastapi-utils = "^0.2.1"
sqlalchemy = "^1.3.19"
coverage = "^5.3"
pydantic-sqlalchemy = "^0.0.7"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
pydantic = {version = "^1.8.2", extras = ["email"]}
python-multipart = "^0.0.5"
cloudinary = "^1.26.0"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
xdoctest = "^0.15.0"
pygments = "^2.7.1"
mypy = "^0.790"
sqlalchemy-stubs = "^0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
